# autocode

./: AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: arxiv.py  db.py  github.py  main.py  web_search.py
app/api/: query.py
app/api/model/: __init__.py  message.py  session.py  user.py
app/core/: post_model_hook.py  pre_model_hook.py  session_service.py  tool.py
